--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -1,249 +1,250 @@
-extends ../layout
+extends ../_layout
 
 block hero-title
   h1 Grid
 
-block toc-basic
-  ul
-    li
-      a(href="#use-shortcuts") Use shortcuts
-    li
-      a(href="#use-numbers") Use numbers
-    li
-      a(href="#lefts") lefts
+block variables
+  - var showFooter = false
+  - var title = "Grid"
 
-block toc-variations
-  ul
-    li
-      a(href="#responsive") Responsive
+block ui-stylesheet
+  link(rel="stylesheet" href="/css/pages/docs/grid.css") 
 
-block basic
+block documents
+  .document
+    article.article
+      :markdown
 
-  .example(style="display: none")
-    .row
-      .test-a: .col-example foo
-      .col.col-third.col-left-xs-1.col-left-rg-3: .col-example foo
+        The grid includes two components
 
-  .example
-    .row
-      .col-third
-        .col-example
-          p I'm 4 columns on desktop monitors...
-          p 6 columns on tablets...
-          p and 12 (full) columns on mobile.
+        1. A row
+        1. Columns
 
-      .col-twothirds
-        .col-example
-          p I'm eight columns on desktop monitors...
-          p 6 columns on tablets
-          p and 12 (full) columns on mobile.
-
-  .ifnot-semantic
-    :markdown
-      <span>
-
-          <section class="row">
-            <aside class="col-third">
-              <p>Sidebar</p>
-            </aside>
-            <main class="col-twothirds">
-              <p>Main Pane</p>
-            </main>
-          </section>
-
-  .if-semantic
-    :markdown
-      <span>
-
-          <section class="application">
-            <aside class="sidebar">
-              <p>Sidebar</p>
-            </aside>
-            <main class="mainpane">
-              <p>Main Pane</p>
-            </main>
-          </section>
-
-    :markdown
-      <span>
-
-          .application {
-            @include row();
-          }
-          .sidebar {
-            @include column('third');
-          }
-          .mainpane {
-            @include column('twothirds');
-          }
-
-  :markdown
-
-    The grid includes three components
-
-    1. A container
-    1. A row
-    1. A column
-
-    The **container** is optional. This creates a fixed width container for the
-    grid elements. The fixed width automatically resizes based on screen width.
-
-  .ifnot-semantic
-    :markdown
-      <span>
-
-          <div class="container">
-            ...
-          </div>
-
-  .if-semantic
-    :markdown
-      <span>
-
-          <div class="wrapper">
-            ...
-          </div>
-
-          .wrapper {
-            @include container();
-          }
-
-  :markdown
-    For more about wrappers, see the example on fixed, fluid, and fixed fluid
-    layouts in [Layout and CSS](/docs/#{docsVersion}/ui/)
-
-    The **row** is a container for column elements.
-
-    The **column** is a measured container that occupies up to 12 column widths.
-
-  h2#use-shortcuts Use Shortcuts
-
-  :markdown
-
-    Columns can be expressed by a number or one of three English words
-
-  .if-semantic
-    :markdown
-      These are passed into the `column()` mixin.
-
-          @include column('third');
-          @include column('twothirds');
-          @include column('half');
-
-  .ifnot-semantic
-    :markdown
-      Each are added to the end of the `.col-` class.
-
+      .example
+        .row
           .col-third
+            .col-example
+              p I'm 4 columns on desktop monitors...
+              p 6 columns on tablets...
+              p and 12 (full) columns on mobile.
+
           .col-twothirds
-          .col-half
+            .col-example
+              p I'm eight columns on desktop monitors...
+              p 6 columns on tablets
+              p and 12 (full) columns on mobile.
 
-  :markdown
+    article.code
+      .ifnot-semantic
+        :markdown
+          <span>
 
-    These are not just for convenience, they automatically set breakpoints to
-    change column widths on various screen sizes.
+              <section class="row">
+                <aside class="col-third">
+                  <p>Sidebar</p>
+                </aside>
+                <main class="col-twothirds">
+                  <p>Main Pane</p>
+                </main>
+              </section>
 
-  h2#use-numbers Use numbers
+      .if-semantic
+        :markdown
+          <span>
 
-  :markdown
+              <section class="application">
+                <aside class="sidebar">
+                  <p>Sidebar</p>
+                </aside>
+                <main class="mainpane">
+                  <p>Main Pane</p>
+                </main>
+              </section>
 
-    Passing in numbers, choose a column width from 1-12:
+        :markdown
+          <span>
 
-  .if-semantic
-    :markdown
-      <span>
+              .application {
+                @include row();
+              }
+              .sidebar {
+                @include column('third');
+              }
+              .mainpane {
+                @include column('twothirds');
+              }
 
-          .newsfeed {
-            @include column(2);
-          }
-          .article {
-            @include column(10);
-          }
+  .document
+    article.article
+      :markdown
 
-  .ifnot-semantic
-    :markdown
-      <span>
+        The **container** is optional. This creates a fixed width container for the
+        grid elements. The fixed width automatically resizes based on screen width.
 
-          <div class="newsfeed col-2">
-            ...
-          </div>
-          <div class="article col-10">
-            ...
-          </div>
+        For more about wrappers, see the example on fixed, fluid, and fixed fluid
+        layouts in [Layout and CSS](/docs/#{docsVersion}/ui/)
+
+        The **row** is a container for column elements.
+
+        The **column** is a measured container that occupies up to 12 column widths.
+
+    article.code
+      .ifnot-semantic
+        :markdown
+          <span>
+
+              <div class="container">
+                ...
+              </div>
+
+      .if-semantic
+        :markdown
+          <span>
+
+              <div class="wrapper">
+                ...
+              </div>
+
+              .wrapper {
+                @include container();
+              }
+
+  .document
+    article.article 
+      :markdown 
+        # Use Shortcuts
+
+        Columns can be expressed by a number or one of three English words
+        These are passed into the `column()` mixin.
+
+        These are not just for convenience, they automatically set breakpoints to
+        change column widths on various screen sizes.  
+
+    article.code
+      .if-semantic
+        :markdown
+          <span>
+
+              @include column('third');
+              @include column('twothirds');
+              @include column('half');
+
+      .ifnot-semantic
+        :markdown
+          <span>
+
+              .col-third
+              .col-twothirds
+              .col-half 
+
+  .document
+    article.article
+      :markdown 
+        # Use numbers
+
+        Passing in numbers, choose a column width from 1-12:
+
+    article.code
+      .if-semantic
+        :markdown
+          <span>
+
+              .newsfeed {
+                @include column(2);
+              }
+              .article {
+                @include column(10);
+              }
+
+      .ifnot-semantic
+        :markdown
+          <span>
+
+              <div class="newsfeed col-2">
+                ...
+              </div>
+              <div class="article col-10">
+                ...
+              </div> 
+
+  .document
+    article.article.article-full
+      h1 More examples
+      .example
+        .row
+          .col-3: .col-example 3 columns
+          .col-3: .col-example 3 columns
+          .col-3: .col-example 3 columns
+          .col-3: .col-example 3 columns
+
+        .row
+          .col-3: .col-example 3 columns
+          .col-6: .col-example 6 columns
+          .col-3: .col-example 3 columns
+
+        .row
+          .col-6: .col-example 6 columns
+          .col-6: .col-example 6 columns
+
+        .row
+          .col-3: .col-example 3 columns
+          .col-9: .col-example 9 columns
+
+        .row
+          .col-3: .col-example 3 columns
+          .col-3.col-left-6: .col-example 3 columns, 6 column left
+
+        .row
+          .col-6.col-right-6: .col-example 6 columns, 6 column right
+
+        .row
+          .col-6: .col-example 6 columns
+
+        .row
+          .col-9.col-left-3: .col-example 9 columns, 3 column left
+
+        .row
+          .col-4: .col-example 4 columns
+          .col-4: .col-example 4 columns
+          .col-4: .col-example 4 columns
+
+        .row
+          .col-4.col-left-4.col-right-4: .col-example 4 columns, 4 column left, 4 column right
+
+        .row
+          .col-4.col-right-4: .col-example 4 columns, 4 column right
+
+        .row
+          .col-4.col-left-4: .col-example 4 columns, 4 column left
+
+        .row
+          .col-6: .col-example 6 columns
+          .col-6: .col-example 6 columns
+          .col-6: .col-example 6 columns
+          .col-6: .col-example 6 columns
+
+        .row
+          .col-12: .col-example 12 columns
+
+  .document
+    article.article.article-full
+      :markdown
+        ## Right offsets
+
+        An interesting thing happens when using CSS flexbox for a grid: When the
+        columns don't add up to 12, they space themselves out (thanks to the `space-between`
+        property).
+
+        Look at the difference between these two grids:
+
+      .example
+        .row
+          .col-3: .col-example 3 columns
+          .col-6.col-left-3: .col-example 6 columns with 3 column left
+          .col-3: .col-example 3 columns
+          .col-6: .col-example 6 columns
 
 block variations
-  h2 More examples
-  .example
-    .row
-      .col-3: .col-example 3 columns
-      .col-3: .col-example 3 columns
-      .col-3: .col-example 3 columns
-      .col-3: .col-example 3 columns
-
-    .row
-      .col-3: .col-example 3 columns
-      .col-6: .col-example 6 columns
-      .col-3: .col-example 3 columns
-
-    .row
-      .col-6: .col-example 6 columns
-      .col-6: .col-example 6 columns
-
-    .row
-      .col-3: .col-example 3 columns
-      .col-9: .col-example 9 columns
-
-    .row
-      .col-3: .col-example 3 columns
-      .col-3.col-left-6: .col-example 3 columns, 6 column left
-
-    .row
-      .col-6.col-right-6: .col-example 6 columns, 6 column right
-
-    .row
-      .col-6: .col-example 6 columns
-
-    .row
-      .col-9.col-left-3: .col-example 9 columns, 3 column left
-
-    .row
-      .col-4: .col-example 4 columns
-      .col-4: .col-example 4 columns
-      .col-4: .col-example 4 columns
-
-    .row
-      .col-4.col-left-4.col-right-4: .col-example 4 columns, 4 column left, 4 column right
-
-    .row
-      .col-4.col-right-4: .col-example 4 columns, 4 column right
-
-    .row
-      .col-4.col-left-4: .col-example 4 columns, 4 column left
-
-    .row
-      .col-6: .col-example 6 columns
-      .col-6: .col-example 6 columns
-      .col-6: .col-example 6 columns
-      .col-6: .col-example 6 columns
-
-    .row
-      .col-12: .col-example 12 columns
-
-  :markdown
-    ## Right offsets
-
-    An interesting thing happens when using CSS flexbox for a grid: When the
-    columns don't add up to 12, they space themselves out (thanks to the `space-between`
-    property).
-
-    Look at the difference between these two grids:
-
-  .example
-    .row
-      .col-3: .col-example 3 columns
-      .col-6.col-left-3: .col-example 6 columns with 3 column left
-      .col-3: .col-example 3 columns
-      .col-6: .col-example 6 columns
 
   :markdown
     They look so similar, you might say the 3 column left isn't necessary in the first.
