Still working on grid

--- a/lib/jade/_layout.jade
+++ b/lib/jade/_layout.jade
@@ -31,7 +31,7 @@ html(lang='en')
       - if (showFooter == true)
         footer.main
           .wrapper
-            p Made from <a href="http://everything.io">Everything</a>
+            p Made from <a href="http://twitter.com/everythingdotio">Everything</a>
 
       - else
         script(src="/js/navbar-fixer.js")
