--- a/lib/sass/pages/docs/grid.sass
+++ b/lib/sass/pages/docs/grid.sass
@@ -3,6 +3,9 @@
 .row
   +row
 
+.col-2
+  +column(2)
+
 .col-3
   +column(3)
 
@@ -21,17 +24,32 @@
 .col-left-6
   +left(6)
 
+.col-left-1
+  +left(1)
+
 .col-left-3
   +left(3)
 
 .col-left-4
   +left(4)
 
+.col-left-2
+  +left(2)
+
+.col-right-3
+  +right(3)
+
 .col-right-4
   +right(4)
 
 .col-right-6
   +right(6)
+
+.col-right-twothirds
+  +right('twothirds')
+
+.col-left-twothirds
+  +left('twothirds')
 
 .col-third
   +column('third')
@@ -44,3 +62,9 @@
   background: map-get($white, darker)
   color: map-get($black, lighter)
   text-align: center
+
+  &.gray
+    background: white
+    margin:
+      bottom: 0
+      top: $space/2
