--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -229,7 +229,7 @@ block documents
   .document
     article.article.article-full
       :markdown
-        ## Right offsets
+        # Right offsets
 
         An interesting thing happens when using CSS flexbox for a grid: When the
         columns don't add up to 12, they space themselves out (thanks to the `space-between`
@@ -480,195 +480,267 @@ block documents
                 </div>
               </div>
 
+  .document
+    article.article
+      h1#responsive Responsive
+      p Remember that using shortcut classes will automatically make your grid responsive. See "shortcuts" above.
 
-block variations 
-  h2#responsive Responsive
-  p Remember that using shortcut classes will automatically make your grid responsive. See "shortcuts" above.
+      .ifnot-semantic
+        :markdown
+          Setting column rules via classes requires just a bit more syntax.
+
+          It is best practice to set the styles you expect on your smallest device
+          first. This is what is known as designing "[Mobile First](http://bradfrostweb.com/blog/mobile/the-many-faces-of-mobile-first/)"
+
+          For this, we'll use a regular grid class.
+
+    article.code
+      .ifnot-semantic
+        :markdown
+          <span>
+
+              <div class="row">
+                <section class="col-12">
+                  <h1>About me</h1>
+                  <p>...</p>
+                </section>
+                <section class="col-12">
+                  <h1>My work</h1>
+                  <p>...</p>
+                </section>
+                <section class="col-12">
+                  <h1>Get in touch</h1>
+                  <p>...</p>
+                </section>
+              </div>
 
   .ifnot-semantic
-    :markdown
-      Setting column rules via classes requires just a bit more syntax.
+    .document
+      article.article
+        :markdown
+          In this example, we want these three sections to stack on top of one
+          another. However, on tablet, it would be nice to have the first two in two
+          columns. We can use the following syntax to create a mobile rule: 
 
-      It is best practice to set the styles you expect on your smallest device
-      first. This is what is known as designing "[Mobile First](http://bradfrostweb.com/blog/mobile/the-many-faces-of-mobile-first/)"
+          `size` is the viewport size and `columns` is a number 1-12.
 
-      For this, we'll use a regular grid class.
+          Here are the sizes available with their corresponding widths:
 
-          <div class="row">
-            <section class="col-12">
-              <h1>About me</h1>
-              <p>...</p>
-            </section>
-            <section class="col-12">
-              <h1>My work</h1>
-              <p>...</p>
-            </section>
-            <section class="col-12">
-              <h1>Get in touch</h1>
-              <p>...</p>
-            </section>
-          </div>
+        table
+          thead
+            tr
+              th Size name
+              th Actual width
+          tbody
+            - for breakpoint in [{name: 'xs', size: '360px'}, {name: 'sm', size: '480px'}, {name: 'rg', size: '768px'}, {name: 'md', size: '1024px'}, {name: 'lg', size: '1200px'}, {name: 'xl', size: '1400px' }]
+              tr
+                td
+                  code #{breakpoint.name}
+                td #{breakpoint.size}
 
-      In this example, we want these three sections to stack on top of one
-      another. However, on tablet, it would be nice to have the first two in two
-      columns. We can use the following syntax to create a mobile rule:
+      article.code
+        :markdown
+          <span>
 
-          .col-[size]-[columns]
+              .col-[size]-[columns]
 
-      `size` is the viewport size and `columns` is a number 1-12.
+  .ifnot-semantic
+    .document
+      article.article
+        :markdown
+          Now let's add a rule.
 
-      Here are the sizes available with their corresponding widths:
+          As you can see, we did not need to add a class to the last `section` because
+          we want that to stay full width, at least for this breakpoint.
 
-    table
-      thead
-        tr
-          th Size name
-          th Actual width
-      tbody
-        - for breakpoint in [{name: 'xs', size: '360px'}, {name: 'sm', size: '480px'}, {name: 'rg', size: '768px'}, {name: 'md', size: '1024px'}, {name: 'lg', size: '1200px'}, {name: 'xl', size: '1400px' }]
-          tr
-            td
-              code #{breakpoint.name}
-            td #{breakpoint.size}
+      article.code
+        :markdown
+          <span>
 
-    :markdown
-      Now let's add a rule.
+              <div class="row">
+                <section class="col-12 col-md-6">
+                  <h1>About me</h1>
+                  <p>...</p>
+                </section>
+                <section class="col-12 col-md-6">
+                  <h1>My work</h1>
+                  <p>...</p>
+                </section>
+                <section class="col-12">
+                  <h1>Get in touch</h1>
+                  <p>...</p>
+                </section>
+              </div>
 
-          <div class="row">
-            <section class="col-12 col-md-6">
-              <h1>About me</h1>
-              <p>...</p>
-            </section>
-            <section class="col-12 col-md-6">
-              <h1>My work</h1>
-              <p>...</p>
-            </section>
-            <section class="col-12">
-              <h1>Get in touch</h1>
-              <p>...</p>
-            </section>
-          </div>
+  .ifnot-semantic
+    .document
+      article.article
+        :markdown
+          On desktop, we have enough room to split these up a little more. Let's make
+          each one of them a third of the total width.
 
-      As you can see, we did not need to add a class to the last `section` because
-      we want that to stay full width, at least for this breakpoint.
+      article.code
+        :markdown
+          <span>
 
-      On desktop, we have enough room to split these up a little more. Let's make
-      each one of them a third of the total width.
+              <div class="row">
+                <section class="col-12 col-md-6 col-lg-4">
+                  <h1>About me</h1>
+                  <p>...</p>
+                </section>
+                <section class="col-12 col-md-6 col-lg-4">
+                  <h1>My work</h1>
+                  <p>...</p>
+                </section>
+                <section class="col-12 col-lg-4">
+                  <h1>Get in touch</h1>
+                  <p>...</p>
+                </section>
+              </div>
 
-          <div class="row">
-            <section class="col-12 col-md-6 col-lg-4">
-              <h1>About me</h1>
-              <p>...</p>
-            </section>
-            <section class="col-12 col-md-6 col-lg-4">
-              <h1>My work</h1>
-              <p>...</p>
-            </section>
-            <section class="col-12 col-lg-4">
-              <h1>Get in touch</h1>
-              <p>...</p>
-            </section>
-          </div>
+  .ifnot-semantic
+    .document
+      article.article
+        h2#lefts
 
-    h3#lefts
+        :markdown
+          For mobile lefts, we use the form:
 
-    :markdown
-      For mobile lefts, we use the form:
 
-          .col-left-[size]-[columns]
+      article.code
+        :markdown
+          <span>
 
-      If we wanted our "Get in touch" section above to half-sized and left by
-      half on a medium-sized display, we could add this:
+              .col-left-[size]-[columns]
 
-          <section class="col-12 col-md-6 col-left-md-6 col-lg-4">
-            <h1>Get in touch</h1>
-            <p>...</p>
-          </section>
+    .document
+      article.article
+        :markdown
+          If we wanted our "Get in touch" section above to half-sized and left by
+          half on a medium-sized display, we could add this:
 
-      The left will automatically remove itself if a `col-lg` column definition
-      is declared.
+          The left will automatically remove itself if a `col-lg` column definition
+          is declared.  
+
+      article.code
+        :markdown
+          <span>
+
+              <section class="col-12 col-md-6 col-left-md-6 col-lg-4">
+                <h1>Get in touch</h1>
+                <p>...</p>
+              </section>
 
   .if-semantic
-    :markdown
-      Mix your grid rules into media queries to make your own responsive rules.
+    .document
+      article.article.article-full
+        :markdown
+          Mix your grid rules into media queries to make your own responsive rules.
 
-      It helps to use the breakpoints provided. Each returns a fixed width based
-      on a common device.
+          It helps to use the breakpoints provided. Each returns a fixed width based
+          on a common device.
 
-    table
-      thead
-        tr
-          th Variable
-          th Actual width
-      tbody
-        - for breakpoint in [{name: '$phone', size: '360px'}, {name: '$phablet', size: '480px'}, {name: '$tablet', size: '768px'}, {name: '$tablet-landscape', size: '1024px'}, {name: '$large-monitor', size: '1200px'}, {name: '$xl-monitor', size: '1400px' }, {name: '$xxl-monitor', size: '1600px'}]
-          tr
-            td
-              code #{breakpoint.name}
-            td #{breakpoint.size}
+        table
+          thead
+            tr
+              th Variable
+              th Actual width
+          tbody
+            - for breakpoint in [{name: '$phone', size: '360px'}, {name: '$phablet', size: '480px'}, {name: '$tablet', size: '768px'}, {name: '$tablet-landscape', size: '1024px'}, {name: '$large-monitor', size: '1200px'}, {name: '$xl-monitor', size: '1400px' }, {name: '$xxl-monitor', size: '1600px'}]
+              tr
+                td
+                  code #{breakpoint.name}
+                td #{breakpoint.size}
 
-    :markdown
+        :markdown 
+          When using media queries, it's best practice to write your styles for the
+          smallest device first, and write the exceptions as you go up. This is
+          commonly referred to as
+          [Mobile First](http://bradfrostweb.com/blog/mobile/the-many-faces-of-mobile-first/)
+          design.
 
-      When using media queries, it's best practice to write your styles for the
-      smallest device first, and write the exceptions as you go up. This is
-      commonly referred to as
-      [Mobile First](http://bradfrostweb.com/blog/mobile/the-many-faces-of-mobile-first/)
-      design.
+    .document
+      article.article
+        :markdown
+          Here's how we might make some different column rules using
+          these breakpoints:
 
-      Here's how we might make some different column rules using
-      these breakpoints:
+      article.code
+        :markdown
+          <span>
 
-          <div class="about-me">
-            ...
-          </div>
-          <div class="my-work">
-            ...
-          </div>
-          <div class="getting-in-touch">
-            ...
-          </div>
+              <div class="about-me">
+                ...
+              </div>
+              <div class="my-work">
+                ...
+              </div>
+              <div class="getting-in-touch">
+                ...
+              </div> 
 
-      We want each of the above sections to occupy a third of the page on
-      desktop.
+    .document
+      article.article
+        :markdown
+          We want each of the above sections to occupy a third of the page on
+          desktop.
 
-      Oh wait, we're designing this mobile first. Let's start with the phone.
-      Three columns would be a little crowded, so let's just stack one on top of
-      the other.
+          Oh wait, we're designing this mobile first. Let's start with the phone.
+          Three columns would be a little crowded, so let's just stack one on top of
+          the other.
 
-          .about-me, .my-work, .getting-in-touch {
-            @include column(12);
-          }
+      article.code
+        :markdown
+          <span>
 
-      This looks good, but on a tablet in landscape position, the reading stride
-      is a little wide. Let's split up the first two columns and leave the last
-      one full.
+              .about-me, .my-work, .getting-in-touch {
+                @include column(12);
+              }
 
-          .about-me, .my-work, .getting-in-touch {
-            @include column(12);
-          }
-          @media screen and (min-width: $tablet-landscape) {
-            .about-me, .my-work {
-              @include column(6);
-            }
-          }
+    .document
+      article.article
+        :markdown
+          This looks good, but on a tablet in landscape position, the reading stride
+          is a little wide. Let's split up the first two columns and leave the last
+          one full.
 
-      Notice, we don't have to write anything for `.getting-in-touch` because
-      we inherit its full-width from the phone's rule.
+      article.code
+        :markdown
+          <span>
 
-      Now we're on desktop and we're ready to go into three column mode.
+              .about-me, .my-work, .getting-in-touch {
+                @include column(12);
+              }
+              @media screen and (min-width: $tablet-landscape) {
+                .about-me, .my-work {
+                  @include column(6);
+                }
+              }
 
-          .about-me, .my-work, .getting-in-touch {
-            @include column(12);
-          }
-          @media screen and (min-width: $tablet-landscape) {
-            .about-me, .my-work {
-              @include column(6);
-            }
-          }
-          @media screen and (min-width: $desktop) {
-            .about-me, .my-work, .getting-in-touch {
-              @include column(4);
-            }
-          }
+    .document
+      article.article
+        :markdown 
+          Notice, we don't have to write anything for `.getting-in-touch` because
+          we inherit its full-width from the phone's rule.
 
-      That should be all we need for a responsive grid.
+          Now we're on desktop and we're ready to go into three column mode.
+
+          That should be all we need for a responsive grid.
+
+      article.code
+        :markdown
+          <span>
+
+              .about-me, .my-work, .getting-in-touch {
+                @include column(12);
+              }
+              @media screen and (min-width: $tablet-landscape) {
+                .about-me, .my-work {
+                  @include column(6);
+                }
+              }
+              @media screen and (min-width: $desktop) {
+                .about-me, .my-work, .getting-in-touch {
+                  @include column(4);
+                }
+              }
