Some home page changes

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -13,10 +13,8 @@ block content
   article.wrapper 
     main.first-pitch
       .feature
-        h1 Easy to theme
-        p Who wants a framework that makes your site looks live everyone
-          | else's? You can customize the Kickstart theme with just a few
-          | variables, or by downloading a theme from the community.
+        h1 Extendible
+        p The library is just the core. Kickstart is designed to be extended and themed via the [Kickstart Store](http://kickstart-store.com).
 
       .feature
         h1 Semantic or class-based
@@ -30,10 +28,10 @@ block content
 
       .feature
         video(src="/videos/overriding-component.mp4" autoplay="autoplay" loop)
-        h1 For modern browsers
-        p Kickstart targets modern browsers to give you the latest, most robust features.
-          | For targeting older browsers, former releases of Kickstart are made available
-          | via the documentation.
+        h1 Easy to theme
+        p Who wants a framework that makes your site looks live everyone
+          | else's?&nbsp;
+          a(href="/docs/#{docsVersion}/theming/") More on Themes
 
       .feature
         video(src="/videos/overriding-component.mp4" autoplay="autoplay" loop)
