Finishing layout. I think we're one page away from deploying new style.

--- a/rails/app/assets/stylesheets/kickstart_rails/pages/docs/ui/notifications.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/docs/ui/notifications.sass
@@ -3,8 +3,15 @@
 .growl
   +alert
 
-  &.alert-warn
+  &.alert-yellow
     background-color: map-get($colors, yellow)
+    color: black
 
-  &.alert-error
+  &.alert-red
     background-color: map-get($colors, red)
+
+  &.alert-blue
+    background-color: map-get($colors, blue)
+
+  &.alert-green
+    background-color: map-get($colors, green)
