Might be done with relayout

--- a/lib/jade/about/index.jade
+++ b/lib/jade/about/index.jade
@@ -1,5 +1,9 @@
 extends ../_fullpage-layout
 
+block variables
+  - var showFooter = true
+  - var title = "About"
+
 block content
   :markdown
     # About
