--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -13,8 +13,10 @@ block content
   article.wrapper 
     main.first-pitch
       .feature
-        h1 Extendible
-        p The library is just the core. Kickstart is designed to be extended and themed via the [Kickstart Store](http://kickstart-store.com).
+        :markdown
+          # Extendible
+          
+          The library is just the core. Kickstart is designed to be extended and themed via the [Kickstart Store](http://kickstart-store.com).
 
       .feature
         h1 Semantic or class-based
