--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -58,6 +58,14 @@ footer.main
     color: white
     text-decoration: underline
 
+// Growl
+.growl
+  +alert
+
+  &.warning
+    background-color: map-get($colors, yellow)
+    color: black
+
 // Iframes
 // -------
 
