--- a/rails/app/assets/stylesheets/kickstart_rails/pages/index.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/index.sass
@@ -55,8 +55,16 @@ video
     +p(true)
 
 .first-pitch
+  .feature-image
+    +column('third')
+
+    img
+      max-width: 100%
+
   .feature
-    +column('half')
+    +column('twothirds')
+    margin:
+      bottom: $space * 2
 
 .second-pitch
   .feature
@@ -74,4 +82,25 @@ video
 
     h1
       +heading-sm
+
+.specs
+  +row
+
+  h1
+    +heading-xs
+    +column(12)
+
+  .spec
+    +column(6)
+
+    @media screen and (min-width: $desktop)
+      +column(3)
+
+dl
+  font-size: 0.85rem
+
+  dt
+    font-weight: bold
+  dd
+    margin-left: 0
 
