Migration to flex for button-group suspiciously working flawlessly.

--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -114,13 +114,12 @@
   margin:
     bottom: 0
     top: 0
-  display: inline-block
-  vertical-align: middle
+  display: flex
+  align-items: center
   position: relative
 
   > li
     color: inherit
-    display: inline-block
 
     > a, > button, > input
       color: inherit
