--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -256,3 +256,9 @@ hr
 
 @import ../core/_direct-apply.sass
 @import ../vendor/_index
+
+// Switches
+// --------
+
+=switch($color: $primary-color)
+  +switch-default($color)
