--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -27,6 +27,9 @@ h3, h4, h5, h6
     @media screen and (min-width: $phablet)
       float: left
 
+    form.switches
+      margin-bottom: $space
+
   .fixed-main
     @media screen and (min-width: $phablet)
       width: 50%
