Adding documentation around adding extensions

--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -11,6 +11,7 @@
           li: a(href="/docs/#{docsVersion}/theming/") Theming
           li: a(href="/docs/#{docsVersion}/grid/") Grid
           li: a(href="/docs/#{docsVersion}/ui/") Layout and CSS
+          li: a(href="/docs/#{docsVersion}/adding-extensions/") Adding extensions
       li
         | Components
         ul
