--- a/lib/jade/docs/3.x/theming/index.jade
+++ b/lib/jade/docs/3.x/theming/index.jade
@@ -92,13 +92,28 @@ block documents
         Here's how to do this without breaking links.
 
   .document
-    article.article.article-full
+    article.article
       :markdown 
         If using a theme not included with kickstart, add your theme to assets/stylesheets. 
         
         If you want to make one from scratch, you can 
         also [Copy one of the themes from the repo](https://github.com/ajkochanowicz/Kickstrap/tree/master/lib/sass/themes)
         into assets/stylesheets of your project.  
+
+        There's one questionable line in this file when doing this, shown in the code.
+        This is looking for an `_index.sass` file in `vendor`
+
+        You can either create this directory and file to list an `@import` index of 3rd-party
+        components, or just delete the `@import` line altogether. This mainly exists for node.js 
+        usage.
+
+    article.code
+      :markdown
+        <span>
+
+            // Consider removing this line or creating this asset
+            @import ../vendor/_index
+
 
   .document
     article.article
