--- a/lib/sass/kickstart-semantic.sass
+++ b/lib/sass/kickstart-semantic.sass
@@ -5,6 +5,6 @@
 //  the same .css name from your html/jade file.
 
 // Choose your theme
-@import themes/_default
+@import themes/default/theme
 
 // Now write your own Sass
