--- a/lib/jade/docs/3.x/theming/index.jade
+++ b/lib/jade/docs/3.x/theming/index.jade
@@ -17,9 +17,9 @@ block documents
         works like an extensible class.
 
         The easiest way to get started is to simply make a copy of
-        `lib/themes/_default.sass` and rename it as your own.
+        `lib/themes/default/theme.sass` and rename it as your own.
 
-        You'll notice `_default.sass` has a very repetitive structure like this:
+        You'll notice `default/theme.sass` has a very repetitive structure like this:
 
     article.code
       :markdown
