--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -2,7 +2,7 @@
 // ==================
 // Generic styles that should be shared across the documentation
 
-@import themes/_default
+@import themes/default/theme
 
 h1
   +heading-rg
