--- a/rails/app/assets/stylesheets/kickstart_rails/pages/index.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/index.sass
@@ -2,7 +2,7 @@
 // ==========
 // Homepage for getkickstart.com
 
-@import themes/_default
+@import themes/default/theme
 
 video
   max-width: 100%
@@ -17,7 +17,7 @@ video
   padding: ($space * 2)
   margin:
     top: -70px
-    bottom: $space 
+    bottom: $space
   padding-top: 70px
 
   @media screen and (min-width: $desktop)
@@ -103,4 +103,3 @@ dl
     font-weight: bold
   dd
     margin-left: 0
-
