--- a/rails/app/assets/stylesheets/kickstart_rails/themes/default/theme.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/default/theme.sass
@@ -20,10 +20,9 @@
 $white: (dark: #F7F7F7, darker: #DDD, darkest: #CCC)
 $gray:  (lightest: #BBB, lighter: #AAA, light: #999, dark: #777, darker: #666, darkest: #555)
 $black: (lightest: #444, lighter: #333, light: #222)
-$brown: (lightest: #f2efeb, lighter: #d8cdb4, light: #c6b799, darkest: #1e1c17)
 
 // Rainbow
-$colors: (red: #9b0000, orange: #f7a828, yellow: #fdd726, green: #a2c939, blue: #37a5e2, violet: #8744c1)
+$colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: cornflowerblue, violet: darkmagenta)
 
 // Vendor libraries
 @import url(//fonts.googleapis.com/css?family=Lato:300,400,700,400italic)
@@ -32,14 +31,14 @@ $colors: (red: #9b0000, orange: #f7a828, yellow: #fdd726, green: #a2c939, blue: 
 // --------------------------
 // Modifying just these ten variables will take care of 90% of your theme
 
-$primary-color:       map-get($colors, yellow)
+$primary-color:       map-get($colors, blue)
 $secondary-color:     map-get($white, darker)
 $space:               25px
 $heading-font-family: 'museo-sans', 'Lato', helvetica neue, sans-serif
 $body-font-family:    'museo-sans', 'Lato', helvetica neue, sans-serif
 $mono-font-family:    'ubuntu-mono', monospace
 $base-font-size:      16px
-$default-font-color:  map-get($black, lightest)
+$default-font-color:  map-get($gray, darkest)
 $default-line-height: 1.4rem
 
 // --------------------------
@@ -113,7 +112,6 @@ pre
 
 h1, h2, h3, h4, h5, h6
   font-family: $heading-font-family
-  color: map-get($black, lighter)
 
 h1
   +heading-lg
@@ -135,7 +133,6 @@ h6
 
 =type
   +type-default
-  color: map-get($gray, darker)
 
 html
   +type
@@ -163,7 +160,6 @@ html
 
 =button($background-color: map-get($white, dark), $size: 1)
   +button-default($background-color, $size)
-    border-color: transparent
 
 =button-group($color: map-get($white, dark), $size: 1)
   +button-group-default($color, $size)
@@ -197,10 +193,6 @@ hr
 
 =navbar($layout: 'none', $background-color: map-get($white, dark), $breakpoint: $tablet, $collapse: false, $fixed: false)
   +navbar-default($layout, $background-color, $breakpoint, $collapse, $fixed)
-
-    nav
-      h1
-        font-family: $body-font-family
 
 =dropdown_menu
   +dropdown_menu-default
