Little update to docs, but going to rewrite.

--- a/lib/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib/jade/docs/3.x/adding-extensions/index.jade
@@ -88,11 +88,13 @@ block documents
 
         To checkout your submodules simply run this command from the root of your project.
 
+        [Official documentation](http://git-scm.com/book/en/Git-Tools-Submodules#Cloning-a-Project-with-Submodules)
+
     article.code
       :markdown
         <span>
 
-            $(~) git submodule update --recursive
+            $(~) git submodule update --init --recursive
 
   .document
     article.article
